# local-chat

./: CMakeLists.txt  README.md  local-chat.pro
build-local-chat-Desktop_Qt_6_1_1_MSVC2019_64bit-Debug/: .qmake.stash
include/: chat_message.hpp  client.hpp  mainwindow.h  server.hpp
include/server/: server.hpp
src/: client.cpp  mainwindow.cpp  server.cpp
src/client/: CMakeLists.txt  client.cpp
src/qt/: local-chat.pro  mainwindow.ui
src/server/: CMakeLists.txt  server.cpp  server.hpp
